samples/_failures_safe/1761328020_3bf9b7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2de67d8a.c: In function ‘main’:
./samples/SAFE/__tmp_2de67d8a.c:141:5: error: expected expression at end of input
  141 |     if (!init_compression_context(&ctx,
      |     ^~
./samples/SAFE/__tmp_2de67d8a.c:141:5: error: expected declaration or statement at end of input
